--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Trabalho aula/style_home.css">
+    <link rel="stylesheet" href="../Trabalho aula/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <title>Loja de Perfumes</title>
 </head>
@@ -16,7 +17,7 @@
         <nav id="nav">
             <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu"
                 aria-expanded="false">
-                <span id="hamburguer"></span>
+                <span id="hamburger"></span>
             </button>
             <ul id="menu" role="menu">
                 <li><a class="linkMenu" href="./home.html">Home</a></li>
@@ -246,5 +247,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
-
+<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="./JavaScript/menu.js"></script>
 </html>
