--- a/home.html
+++ b/home.html
@@ -48,12 +48,12 @@
             </div>
             <!-- Início controle carrossel -->
             <button class="carousel-control-prev" data-bs-target="#carouselExampleInterval" type="button"
-                data-bs-slide="prev">
+                data-bs-slide="prev" style="background: black;">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" data-bs-target="#carouselExampleInterval" type="button"
-                data-bs-slide="next">
+                data-bs-slide="next" style="background: black;">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Próximo</span>
             </button>
